# AlphaCaml

./: Changes  INSTALL  LICENSE  Makefile  README.md  alphaCaml.install  alphaCaml.opam  alphaLib.install  dune-project
demos/: Makefile  Makefile.shared  README
demos/lambda/: .depend  Makefile  lambda.ml  lambda.mla  lambda.mli
demos/mixins/: Makefile  README  lexer.mll  mm.mla  strings.mli
demos/poplmark/: Makefile  README  core.mli  fsub.mla  lexer.mll  printer.mli  strings.mli
tool/: Makefile  dune  error.mli  front.mli  generator.ml  kind.ml  kind.mli  lexer.mll  parser.mly  strings.mli  version.ml
