opam-version: "2.0"
maintainer: "https://github.com/ocaml/opam-repository/issues"
homepage: "http://cristal.inria.fr/~fpottier/alphaCaml/"
build: make
remove: [["ocamlfind" "remove" "alphaLib"]]
depends: [
  "ocaml" {> "4.03.0"}
  "ocamlfind"
]
install: [make "install"]
synopsis:
  "Turns a so-called \"binding specification\" into an OCaml compilation unit"
description: """
Cαml (pronounced: "alphaCaml") is a tool that turns a so-called
"binding specification" into an OCaml compilation unit. This helps
writers of interpreters, compilers, or other
programs-that-manipulate-programs deal with α-conversion in a safe and
concise style."""
